--- a/web/app/index.html
+++ b/web/app/index.html
@@ -25,6 +25,8 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/svelte-material-ui@6.0.0/bare.min.css"
     />
+    <!-- SMUI Styles -->
+    <link rel="stylesheet" href="dist/smui.css" />
   </head>
   <body>
     <div id="app"></div>
